Use StringUtils to check for empty strings